fix: solve label misaligned

--- a/src/assets/scss/blk-design-system-react/react/_custom-forms.scss
+++ b/src/assets/scss/blk-design-system-react/react/_custom-forms.scss
@@ -1,17 +1,20 @@
 .custom-switch {
-  .custom-control-label::before {
-    height: 22px;
-    width: 45px;
-    border: none;
-    background-image: url($asset-base-path + "/img/darken-night-sky-full-of-stars-fantasy-animation-made-of-magical-sparkly-light-particles-flickering-on-a-purple-blue-gradient-background_bajacpz7x_thumbnail-full01.png");
-    background-position: center center;
-    background-size: cover;
-  }
-  .custom-control-label::after {
-    height: 18px;
-    width: 18px;
-    background-color: rgba(156, 156, 156, 0.9);
-    transition: all 0.25s ease-out;
+  .custom-control-label {
+    vertical-align: middle;
+    &::before {
+      height: 22px;
+      width: 45px;
+      border: none;
+      background-image: url($asset-base-path + "/img/darken-night-sky-full-of-stars-fantasy-animation-made-of-magical-sparkly-light-particles-flickering-on-a-purple-blue-gradient-background_bajacpz7x_thumbnail-full01.png");
+      background-position: center center;
+      background-size: cover;
+    }
+    &::after {
+      height: 18px;
+      width: 18px;
+      background-color: rgba(156, 156, 156, 0.9);
+      transition: all 0.25s ease-out;
+    }
   }
   .custom-control-input:checked {
     ~ .custom-control-label::before {
